Changing description to excerpt

--- a/2012-10-01-pragma.md
+++ b/2012-10-01-pragma.md
@@ -5,7 +5,7 @@ ref: "https://developer.apple.com/library/mac/#documentation/DeveloperTools/gcc-
 category: Objective-C
 rating: 8.0
 published: true
-description: "#pragma declarations are a mark of craftsmanship in Objective-C. Although originally purposed for compiling source code across many different compilers, the modern Xcode-savvy programmer uses #pragma declarations to very different ends."
+excerpt: "`#pragma` declarations are a mark of craftsmanship in Objective-C. Although originally purposed for compiling source code across many different compilers, the modern Xcode-savvy programmer uses #pragma declarations to very different ends."
 ---
 
 `#pragma` declarations are a mark of craftsmanship in Objective-C. Although originally used to make source code compatible between different compilers, the Xcode-savvy coder uses `#pragma` declarations to very different ends.
