--- a/2013-03-04-backrow.md
+++ b/2013-03-04-backrow.md
@@ -4,7 +4,7 @@ title: Back Row
 ref: "http://appletv.ericiii.net/5.2/annotated.php"
 category: ""
 rating: 8.0
-description: "Back Row is a private framework used in the Apple TV user experience. Rather than waiting for Apple to open up the Apple TV SDK, one can take matters into their own hands."
+excerpt: "Back Row is a private framework used in the Apple TV user experience. Rather than waiting for Apple to open up the Apple TV SDK, one can take matters into their own hands."
 ---
 
 For years, many have predicted the announcement of an Apple TV SDK. We all know it's coming. It has to. And it will be amazing when it happens... whenever that is.
