--- a/2013-08-12-random.md
+++ b/2013-08-12-random.md
@@ -4,7 +4,7 @@ title: "rand(3) / random(3) / arc4random(3) / et al."
 ref: "https://developer.apple.com/library/mac/documentation/Darwin/Reference/ManPages/man3/arc4random.3.html"
 category: Objective-C
 published: true
-description: "What passes for randomness is merely a hidden chain of causality. Of course, app developers could care less about philosophy—what they want is code. Thus, our goal this week: to clear up all of the lingering questions and misunderstandings about doing random things in Objective-C"
+excerpt: "What passes for randomness is merely a hidden chain of causality. Of course, app developers could care less about philosophy—what they want is code. Thus, our goal this week: to clear up all of the lingering questions and misunderstandings about doing random things in Objective-C"
 ---
 
 What passes for randomness is merely a hidden chain of causality.
