--- a/2013-09-23-ios7.md
+++ b/2013-09-23-ios7.md
@@ -3,7 +3,7 @@ layout: post
 title: "iOS 7"
 ref: "https://developer.apple.com/library/ios/releasenotes/General/WhatsNewIniOS/Articles/iOS7.html"
 category: ""
-description: "With the NDA finally lifted, we can finally talk about all of the amazing new APIs in iOS 7."
+excerpt: "With the NDA finally lifted, we can finally talk about all of the amazing new APIs in iOS 7."
 ---
 
 With the NDA finally lifted, we can finally talk about all of the amazing new APIs in iOS 7. And there are a _lot_ of them. "1500 new APIs", by Apple's count during the WWDC Keynote. (Granted, a good portion of that could just be all of the changes from `id` to `instancetype`, but that's a huge number, regardless).
