--- a/2013-10-14-nserror.md
+++ b/2013-10-14-nserror.md
@@ -4,7 +4,7 @@ title: NSError
 ref: "https://developer.apple.com/library/mac/documentation/Cocoa/Reference/Foundation/Classes/NSError_Class/Reference/Reference.html"
 category: Cocoa
 rating: 9.5
-description: "NSError is the unsung hero of the Foundation framework. Passed gallantly in and out of perilous method calls, it is the messenger by which we are able to contextualize our failures."
+excerpt: "NSError is the unsung hero of the Foundation framework. Passed gallantly in and out of perilous method calls, it is the messenger by which we are able to contextualize our failures."
 ---
 
 > To err is human.
