--- a/2013-11-04-xctool.md
+++ b/2013-11-04-xctool.md
@@ -4,7 +4,7 @@ title: xctool
 ref: "https://github.com/facebook/xctool"
 category: "Open Source"
 rating: 9.1
-description: "Control the build system, and you control the destiny of the language, its ecosystem, and community."
+excerpt: "Control the build system, and you control the destiny of the language, its ecosystem, and community."
 ---
 
 > Control the build system, and you control the destiny of the language, its ecosystem, and community.
