--- a/2014-01-13-nsrange.md
+++ b/2014-01-13-nsrange.md
@@ -3,7 +3,7 @@ layout: post
 title: NSRange
 category: Cocoa
 rating: 7.2
-description: "NSRange is one of the essential types of Foundation. Passed around and returned in methods throughout the framework, being well-versed in this struct has a range of benefits."
+excerpt: "NSRange is one of the essential types of Foundation. Passed around and returned in methods throughout the framework, being well-versed in this struct has a range of benefits."
 ---
 
 `NSRange` is one of the essential types of Foundation. Passed around and returned in methods throughout the framework, being well-versed in this struct has a range of benefits, which this week's article will help you locate.
