--- a/2014-03-24-nsurl.md
+++ b/2014-03-24-nsurl.md
@@ -3,7 +3,7 @@ layout: post
 title: "NSURL /<br/>NSURLComponents"
 category: Cocoa
 rating: 8.9
-description: "Of all the one-dimensional data types out there, URIs reign supreme. Here, in a single, human-parsable string, is every conceivable piece of information necessary to encode the location of any piece of information that has, does, and will ever exist on a computer."
+excerpt: "Of all the one-dimensional data types out there, URIs reign supreme. Here, in a single, human-parsable string, is every conceivable piece of information necessary to encode the location of any piece of information that has, does, and will ever exist on a computer."
 ---
 
 There is a simple beauty to—let's call them "one-dimensional data types": numbers or strings formatted to contain multiple values, retrievable through a mathematical operator or parsing routine. Like how the hexadecimal color <tt style="color: #EE8262;">#EE8262</tt> can have [red, green, and blue components](http://en.wikipedia.org/wiki/Web_colors) extracted by masking and shifting its bits, or how [regular expressions](http://en.wikipedia.org/wiki/Regular_expression) can match and capture complex patterns in just a few characters.
