--- a/2014-06-09-ios8.md
+++ b/2014-06-09-ios8.md
@@ -4,7 +4,7 @@ title: "iOS 8"
 ref: "https://developer.apple.com/library/prerelease/ios/releasenotes/General/WhatsNewIniOS/Articles/iOS8.html"
 category: ""
 tags: popular
-description: "Ask anyone, and they'll tell you: WWDC 2014 was the one of the most exciting in recent memory. This week, we'll take a look beneath the headline features, and share some of the more obscure APIs that everyone should know about."
+excerpt: "Ask anyone, and they'll tell you: WWDC 2014 was the one of the most exciting in recent memory. This week, we'll take a look beneath the headline features, and share some of the more obscure APIs that everyone should know about."
 ---
 
 Ask anyone, and they'll tell you: WWDC 2014 was one of the most exciting in recent memory. It was, first and foremost, a developer event, with nary a hardware announcement to upstage the latest software & developer tools.
@@ -223,7 +223,7 @@ CTRubyAnnotationRef ruby =
 
 Admittedly, the documentation isn't entirely clear on how exactly to incorporate this into the rest of your `CoreText` drawing calls, but the result would look something like this:
 
-<p><ruby style="font-size: 3em">猫<rt>ねこ</rt></ruby></p>
+<figure><ruby style="font-size: 3em;">猫<rt>ねこ</rt></ruby></figure>
 
 ## New Calendar Identifiers
 
