--- a/2012-09-03-nslocale.md
+++ b/2012-09-03-nslocale.md
@@ -5,7 +5,7 @@ ref: "https://developer.apple.com/library/mac/#documentation/Cocoa/Reference/Fou
 category: Cocoa
 rating: 9.0
 published: true
-description: "Internationalization is like flossing: everyone knows they should do it, but probably don't."
+excerpt: "Internationalization is like flossing: everyone knows they should do it, but probably don't."
 ---
 
 Internationalization is like flossing: everyone knows they should do it, but probably don't.
