--- a/2013-01-28-nsvalue.md
+++ b/2013-01-28-nsvalue.md
@@ -4,7 +4,7 @@ title: NSValue
 ref: "https://developer.apple.com/library/mac/#documentation/Cocoa/Reference/Foundation/Classes/NSValue_Class/Reference/Reference.html"
 category: Cocoa
 rating: 6.0
-description: "Boxing is the process of encapsulating scalars and value types with an object container, and is primarily used to store those values in collection objects—namely arrays and dictionaries. In Foundation, the reigning featherweight champion of boxing is NSValue."
+excerpt: "Boxing is the process of encapsulating scalars and value types with an object container, and is primarily used to store those values in collection objects—namely arrays and dictionaries. In Foundation, the reigning featherweight champion of boxing is NSValue."
 ---
 
 As part of playing the role of Abraham Lincoln in the [eponymous 2012 biopic](http://www.imdb.com/title/tt0443272/), Daniel Day-Lewis would insist on walking through a refrigerator box marked "TIME MACHINE" anytime he entered or left the set. <del markdown="1">[True Story](http://filmdrunk.uproxx.com/2012/10/daniel-day-lewis-method-acting-lincoln-ny-times-profile)</del>.
