--- a/2013-04-08-bool.md
+++ b/2013-04-08-bool.md
@@ -3,7 +3,7 @@ layout: post
 title: "BOOL / bool / Boolean / NSCFBoolean"
 ref: "https://developer.apple.com/library/mac/#documentation/CoreFoundation/Reference/CFBooleanRef/Reference/reference.html"
 category: Objective-C
-description: "Once again, encoding our logical universe into the cold, calculating bytecode of computers forces us to deal with these questions one way or another. And as you'll see from our discussion of boolean types in Objective-C and its kin, truth is indeed stranger than fiction."
+excerpt: "Once again, encoding our logical universe into the cold, calculating bytecode of computers forces us to deal with these questions one way or another. And as you'll see from our discussion of boolean types in Objective-C and its kin, truth is indeed stranger than fiction."
 ---
 
 We've talked before about the [philosophical and technical concerns of nothingness in programming](http://nshipster.com/nil/). This week, our attention turns to another fundamental matter: Truth.
