--- a/2013-05-06-gpuimage.md
+++ b/2013-05-06-gpuimage.md
@@ -4,7 +4,7 @@ title: GPUImage
 ref: "https://github.com/BradLarson/GPUImage"
 category: "Open Source"
 rating: 9.3
-description: "GPUImage is a BSD-licensed iOS library  that lets you apply GPU-accelerated filters and other effects to images, live camera video, and movies. If you're not careful, you may well end up creating a camera app by the end of the article."
+excerpt: "GPUImage is a BSD-licensed iOS library  that lets you apply GPU-accelerated filters and other effects to images, live camera video, and movies. If you're not careful, you may well end up creating a camera app by the end of the article."
 ---
 
 Here at NSHipster, we're all about diving into the darker corners of Objective-C to learn something new about the systems we interact with every day. Often, this means sifting through Apple frameworks or language features (it is, after all, a lot of what it means to work in Objective-C). However, [on occasion](http://nshipster.com/reactivecocoa/), it's nice to take a look to the burgeoning landscape of third-party libraries and frameworks (and there are some truly remarkable ones) for a glimpse of what's new and great outside of Cupertino.
