--- a/2013-12-30-new-years-2014.md
+++ b/2013-12-30-new-years-2014.md
@@ -3,7 +3,7 @@ layout: post
 title: "Reader Submissions -<br/> New Year's 2014"
 category: "Reader Submissions"
 category: ""
-description: "As we prepare to increment our NSDateComponents -year by 1, it's time once again for NSHipster end-of-the-year Reader Submissions!"
+excerpt: "As we prepare to increment our NSDateComponents -year by 1, it's time once again for NSHipster end-of-the-year Reader Submissions!"
 ---
 
 As we prepare to increment our `NSDateComponents -year` by `1`, it's time once again for NSHipster end-of-the-year Reader Submissions! [Last year](https://gist.github.com/mattt/4148342), we got some [mind-blowing tips and tricks](http://nshipster.com/reader-submissions-new-years-2013/). With the release of iOS 7 & Mavericks, and a year's worth of new developments in the Objective-C ecosystem, there was a ton of new stuff to write about.
