--- a/2014-03-17-empathy.md
+++ b/2014-03-17-empathy.md
@@ -3,7 +3,7 @@ layout: post
 title: Empathy
 category: ""
 rating: 10.0
-description: "We naturally want to help one another, to explain ideas, to be generous and patient. However, on the Internet, human nature seems to drop a few packets."
+excerpt: "We naturally want to help one another, to explain ideas, to be generous and patient. However, on the Internet, human nature seems to drop a few packets."
 ---
 
 Great software is created to scratch one's own itch. Being close to a problem provides not only insight for how to solve it, but the motivation to actually follow through.
