Changing framework to category

--- a/2012-07-14-nscache.md
+++ b/2012-07-14-nscache.md
@@ -2,7 +2,7 @@
 layout: post
 title: NSCache
 ref: "https://developer.apple.com/library/mac/#documentation/Cocoa/Reference/Foundation/Classes/NSCache_Class/Reference/Reference.html"
-framework: Foundation
+category: Foundation
 rating: 7.5
 description: "Poor NSCache, always being overshadowed by NSMutableDictionary. It's as if no one knew how it provides all of that garbage collection behavior that developers take great pains to re-implement themselves."
 ---
