--- a/2013-03-04-backrow.md
+++ b/2013-03-04-backrow.md
@@ -2,7 +2,7 @@
 layout: post
 title: Back Row
 ref: "http://appletv.ericiii.net/5.2/annotated.php"
-framework: ""
+category: ""
 rating: 8.0
 description: "Back Row is a private framework used in the Apple TV user experience. Rather than waiting for Apple to open up the Apple TV SDK, one can take matters into their own hands."
 ---
