--- a/2013-08-26-equality.md
+++ b/2013-08-26-equality.md
@@ -3,7 +3,7 @@ layout: post
 title: Equality
 
 ref: "https://developer.apple.com/library/ios/documentation/cocoa/reference/foundation/Protocols/NSObject_Protocol/Reference/NSObject.html"
-framework: Objective-C
+category: Objective-C
 rating: 9.0
 description: "The concept of equality is a central point of debate and inquiry in philosophy and mathematics, with far-reaching implications for matters of ethics, justice, and public policy. It is the task of programmers to reconcile our logical and physical understanding of equality with the semantic domains we model."
 ---
@@ -54,7 +54,7 @@ Here's an idea of how `NSArray` might do this (ignoring, for this example, that 
           return NO;
       }
   }
-  
+
   return YES;
 }
 
@@ -107,9 +107,9 @@ So what's going on here? Why does this work, when the same code for `NSArray` or
 
 It all has to do with an optimization technique known as [string interning](http://en.wikipedia.org/wiki/String_interning), whereby one copy of immutable string value is copied for each distinct value. `NSString *a` and `*b` point to the same copy of the interned string value `@"Hello"`. _Note that this only works for statically defined immutable strings._
 
-Interestingly enough, Objective-C selector names are also stored as interned strings in a shared string pool. 
+Interestingly enough, Objective-C selector names are also stored as interned strings in a shared string pool.
 
-`themoreyouknow.gif`. 
+`themoreyouknow.gif`.
 
 ## Hashing
 
@@ -125,7 +125,7 @@ Now for a quick flashback to Computer Science 101:
 
 A [hash table](http://en.wikipedia.org/wiki/Hash_table) is a fundamental data structure in programming, and it's what enables `NSSet` & `NSDictionary` to have fast (`O(1)`) lookup of elements.
 
-We can best understand hash tables by contrasting them to arrays: 
+We can best understand hash tables by contrasting them to arrays:
 
 **Arrays** store elements in sequential indexes, such that an Array of size `n` will have slots at positions `0`, `1`, up to `n - 1`. To determine where an element is stored in the array (if at all), each position would have to be checked one-by-one (unless the array happens to be sorted, but that's another story).
 
@@ -133,7 +133,7 @@ We can best understand hash tables by contrasting them to arrays:
 
 ---
 
-One of the most common misconceptions about implementing a custom `hash` function comes from [affirming the consequent](http://en.wikipedia.org/wiki/Affirming_the_consequent), thinking that `hash` values _must_ be distinct. This often leads to [needlessly complicated implementations involving the magical incantation of prime numbers copied from Java textbooks](http://stackoverflow.com/a/254380/157142). In reality, a simple [`XOR`](http://en.wikipedia.org/wiki/Exclusive_or) over the hash values of critical properties is sufficient 99% of the time. 
+One of the most common misconceptions about implementing a custom `hash` function comes from [affirming the consequent](http://en.wikipedia.org/wiki/Affirming_the_consequent), thinking that `hash` values _must_ be distinct. This often leads to [needlessly complicated implementations involving the magical incantation of prime numbers copied from Java textbooks](http://stackoverflow.com/a/254380/157142). In reality, a simple [`XOR`](http://en.wikipedia.org/wiki/Exclusive_or) over the hash values of critical properties is sufficient 99% of the time.
 
 The trick is in thinking about what the critical value of an object is.
 
