--- a/2013-11-04-xctool.md
+++ b/2013-11-04-xctool.md
@@ -2,14 +2,14 @@
 layout: post
 title: xctool
 ref: "https://github.com/facebook/xctool"
-framework: "Open Source"
+category: "Open Source"
 rating: 9.1
 description: "Control the build system, and you control the destiny of the language, its ecosystem, and community."
 ---
 
 > Control the build system, and you control the destiny of the language, its ecosystem, and community.
 
-Objective-C has changed so very much in such a very short timespan. In just a few short years, the language has gone from humdrum NeXT vestige to a [position of commanding influence](http://www.tiobe.com/index.php/content/paperinfo/tpci/index.html). A significant portion of these prolific contributions from the open source community for Objective-C has been directly enabled and encouraged by increased ownership around tooling. 
+Objective-C has changed so very much in such a very short timespan. In just a few short years, the language has gone from humdrum NeXT vestige to a [position of commanding influence](http://www.tiobe.com/index.php/content/paperinfo/tpci/index.html). A significant portion of these prolific contributions from the open source community for Objective-C has been directly enabled and encouraged by increased ownership around tooling.
 
 [CocoaPods](http://cocoapods.org), in particular, exemplifies the compounding influences of technology and community. Now two years into the project, there are over 2,700 community-submitted libraries and frameworks that can be integrated into your own project with a simple `pod install` command.
 
@@ -17,7 +17,7 @@ Dependency management is just one of the many aspects of iOS and Mac OS X develo
 
 But this week, our focus is on a tool that redefines the actual build process itself, to serve as the foundation for a new generation of tooling and integration: `xctool`.
 
-* * * 
+* * *
 
 [`xctool`](https://github.com/facebook/xctool) is an open source project by [Fred Potter](https://github.com/fpotter) that came from his work on build system automation at [Facebook](https://github.com/facebook). It is a drop-in replacement for [`xcodebuild`](https://developer.apple.com/library/mac/documentation/Darwin/Reference/ManPages/man1/xcodebuild.1.html), the utility underlying Xcode.app itself.
 
@@ -58,7 +58,7 @@ For this reason alone, xctool has great implications for the emerging discipline
 
 [Travis CI](https://travis-ci.org) offers free continuous integration services for open source projects (as well as a [paid plan for commercial software](http://travis-ci.com)), and is rather unique for supporting Objective-C. It can be configured to run your test suite on every `git push` to GitHub (or your favorite SCM host), and will notify you if your most recent change-set breaks the build.
 
-To add Travis CI to your own Objective-C project, [create an account and webservice hook](http://about.travis-ci.org/docs/user/getting-started/), and create a `.travis.yml` file in your repository: 
+To add Travis CI to your own Objective-C project, [create an account and webservice hook](http://about.travis-ci.org/docs/user/getting-started/), and create a `.travis.yml` file in your repository:
 
 #### .travis.yml
 
@@ -82,7 +82,7 @@ At the time of writing, there is still a ways to go before this becomes widely a
 
 Just as with the growth population within cities, infrastructure makes all of difference. One way or another, whether by local [government mandate](http://en.wikipedia.org/wiki/Commissioners'_Plan_of_1811), [emergent self-organization](http://en.wikipedia.org/wiki/Kowloon_Walled_City), or somewhere in-between, environments are changed to accommodate this growth.
 
-Objective-C has and continues to undergo rapid growth based on the popularity of iOS. It is up to the community, in working with (and sometimes against) Apple to create infrastructure necessary to integrate so many new developers. How successful we are in this respect determines how we understand and communicate our roles and responsibilities as professional developers. 
+Objective-C has and continues to undergo rapid growth based on the popularity of iOS. It is up to the community, in working with (and sometimes against) Apple to create infrastructure necessary to integrate so many new developers. How successful we are in this respect determines how we understand and communicate our roles and responsibilities as professional developers.
 
 Are we clumsy amateurs, or do we take an active role in refining our craft?
 
