--- a/2014-03-24-nsurl.md
+++ b/2014-03-24-nsurl.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "NSURL /<br/>NSURLComponents"
-framework: "Foundation"
+category: "Foundation"
 rating: 8.9
 description: "Of all the one-dimensional data types out there, URIs reign supreme. Here, in a single, human-parsable string, is every conceivable piece of information necessary to encode the location of any piece of information that has, does, and will ever exist on a computer."
 ---
