--- a/2014-06-09-ios8.md
+++ b/2014-06-09-ios8.md
@@ -2,7 +2,7 @@
 layout: post
 title: "iOS 8"
 ref: "https://developer.apple.com/library/prerelease/ios/releasenotes/General/WhatsNewIniOS/Articles/iOS8.html"
-framework: ""
+category: ""
 description: "Ask anyone, and they'll tell you: WWDC 2014 was the one of the most exciting in recent memory. This week, we'll take a look beneath the headline features, and share some of the more obscure APIs that everyone should know about."
 ---
 
