--- a/2012-08-27-cfbag.md
+++ b/2012-08-27-cfbag.md
@@ -2,7 +2,7 @@
 layout: post
 title: CFBag
 ref: "https://developer.apple.com/library/mac/#documentation/CoreFOundation/Reference/CFMutableBagRef/Reference/reference.html"
-framework: CoreFoundation
+category: CoreFoundation
 rating: 7.2
 published: true
 description: "In the pantheon of collection data types in computer science, bag doesn't really have the same clout as lists, sets, associative arrays, trees, graphs, or priority queues. In fact, it's pretty obscure. You've probably never heard of it."
