--- a/2012-10-01-pragma.md
+++ b/2012-10-01-pragma.md
@@ -2,7 +2,7 @@
 layout: post
 title: "#pragma"
 ref: "https://developer.apple.com/library/mac/#documentation/DeveloperTools/gcc-4.0.1/gcc/Pragmas.html#Pragmas"
-framework: Objective-C
+category: Objective-C
 rating: 8.0
 published: true
 description: "#pragma declarations are a mark of craftsmanship in Objective-C. Although originally purposed for compiling source code across many different compilers, the modern Xcode-savvy programmer uses #pragma declarations to very different ends."
