--- a/2013-08-12-random.md
+++ b/2013-08-12-random.md
@@ -2,7 +2,7 @@
 layout: post
 title: "rand(3) / random(3) / arc4random(3) / et al."
 ref: "https://developer.apple.com/library/mac/documentation/Darwin/Reference/ManPages/man3/arc4random.3.html"
-framework: Objective-C
+category: Objective-C
 published: true
 description: "What passes for randomness is merely a hidden chain of causality. Of course, app developers could care less about philosophy—what they want is code. Thus, our goal this week: to clear up all of the lingering questions and misunderstandings about doing random things in Objective-C"
 ---
