--- a/2013-09-23-ios7.md
+++ b/2013-09-23-ios7.md
@@ -2,7 +2,7 @@
 layout: post
 title: "iOS 7"
 ref: "https://developer.apple.com/library/ios/releasenotes/General/WhatsNewIniOS/Articles/iOS7.html"
-framework: ""
+category: ""
 description: "With the NDA finally lifted, we can finally talk about all of the amazing new APIs in iOS 7."
 ---
 
