--- a/2013-12-30-new-years-2014.md
+++ b/2013-12-30-new-years-2014.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Reader Submissions -<br/> New Year's 2014"
 category: "Reader Submissions"
-framework: ""
+category: ""
 description: "As we prepare to increment our NSDateComponents -year by 1, it's time once again for NSHipster end-of-the-year Reader Submissions!"
 ---
 
