--- a/2014-01-13-nsrange.md
+++ b/2014-01-13-nsrange.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: NSRange
-framework: "Foundation"
+category: "Foundation"
 rating: 7.2
 description: "NSRange is one of the essential types of Foundation. Passed around and returned in methods throughout the framework, being well-versed in this struct has a range of benefits."
 ---
