Assorted metadata and content fixes

--- a/2013-05-06-gpuimage.md
+++ b/2013-05-06-gpuimage.md
@@ -57,11 +57,11 @@ Comparing the performance of GPU-based rendering to CPU rendering for something 
   </tbody>
 </table>
 
-### "Oh, so it's like Instagram?"
+### _Oh, so it's like Instagram?_
 
 Let me put it this way:
 
-    Instagram : GPUImage :: Disposable Camera : NASA Space Optics Manufacturing Center
+> Instagram : GPUImage :: Disposable Camera : NASA Space Optics Manufacturing Center
 
 To put it another way, within GPUImage's APIs lay _thousands_ of camera apps, just waiting for the right combination of filters and a little spark of imagination.
 
@@ -227,9 +227,8 @@ Seriously, the [Filter Showcase Example App](https://github.com/BradLarson/GPUIm
 
 ## Rendering Pipeline
 
-<object data="http://nshipster.s3.amazonaws.com/gpuimage-pipeline.svg" type="image/svg+xml">
-  <img src="http://nshipster.s3.amazonaws.com/gpuimage-pipeline.png" />
-</object>
+<img src="http://nshipster.s3.amazonaws.com/gpuimage-pipeline.svg" />
+
 
 GPUImage is, at its core, an Objective-C abstraction around a rendering pipeline. Source images from the camera, network, or disk are loaded and manipulated according to a chain of filters, and finally outputted either a view, graphics context, or data stream.
 
