--- a/2013-10-14-nserror.md
+++ b/2013-10-14-nserror.md
@@ -155,7 +155,7 @@ On the plus side, the Foundation URL Loading system is incredibly mature, and ta
 
 As such, here is an exhaustive, well-formatted table at your disposal:
 
-<table id="CFNetworkErrors">
+<table>
 <tr><td rowspan="3">-1</td><td></td></tr>
 <tr><td><tt>NSURLErrorUnknown</tt></td></tr>
 <tr><td></td></tr>
