Removing ratings from metadata

--- a/2014-01-06-colophon.md
+++ b/2014-01-06-colophon.md
@@ -36,8 +36,7 @@ With dozens of articles under my belt at this point, I'm able to write comfortab
 
 Once I've gotten most of the first draft finished, I'll throw the markdown file into [Marked](http://markedapp.com) to get a sense of the final document as it will read on the site. With all of the formatting in place, I'm able to get a better idea of the actual length and flow of the document. The readability tools and Mac OS X's built-in grammar and spell check act as a first-pass for typos.
 
-### Generating: Jekyll & Compass
-
+### Gene
 [Jekyll](http://jekyllrb.com) is what brings all of the content together to generate the final HTML of the site. The [source code for the site](https://github.com/NSHipster/nshipster.com) has evolved gradually over time to incorporate things like [RSS](http://nshipster.com/feed.xml), syndication on [Twitter](https://twitter.com/nshipster), Facebook, and [Google+](https://plus.google.com/+MatttThompson), and full-text search, as well as other best practices.
 
 For CSS, I use [Sass](http://en.wikipedia.org/wiki/Sass_%28stylesheet_language%29) & [Compass](http://compass-style.org). Once you get used to Sass, there's just no going back to doing CSS by hand. The site itself is long overdue for a re-align, so look forward to that at some point.
