Changing framework to category in metadata

--- a/2012-07-14-nscache.md
+++ b/2012-07-14-nscache.md
@@ -3,7 +3,7 @@ layout: post
 title: NSCache
 
 ref: "https://developer.apple.com/library/mac/#documentation/Cocoa/Reference/Foundation/Classes/NSCache_Class/Reference/Reference.html"
-framework: Foundation
+category: Foundation
 
 translator: "Tony Li"
 rating: 7.5
