--- a/2013-09-23-ios7.md
+++ b/2013-09-23-ios7.md
@@ -3,7 +3,7 @@ layout: post
 title: "iOS 7"
 translator: "Zihan Xu"
 ref: "https://developer.apple.com/library/ios/releasenotes/General/WhatsNewIniOS/Articles/iOS7.html"
-framework: ""
+category: ""
 description: "随着保密协议的解除，我们终于可以开始聊一聊iOS 7里面精彩的新API了。"
 ---
 
