--- a/2014-03-17-empathy.md
+++ b/2014-03-17-empathy.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Empathy
-framework: ""
+category: ""
 rating: 10.0
 description: "我们出于本性地想慷慨而有耐心地帮助其他人、解释一些观点。然而在网上，人性似乎没有现实中那么丰满。"
 translator: "Croath Liu"
