--- a/2013-01-07-nil.md
+++ b/2013-01-07-nil.md
@@ -3,7 +3,7 @@ layout: post
 title: "nil / Nil / NULL / NSNull"
 translator: "Zihan Xu"
 ref: "https://developer.apple.com/library/mac/#documentation/Cocoa/Conceptual/NumbersandValues/Articles/Null.html"
-framework: Objective-C
+category: Objective-C
 published: true
 ---
 
