--- a/2013-04-01-icloud.md
+++ b/2013-04-01-icloud.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "iCloud"
-framework: ""
+category: ""
 rating: 4.2
 published: true
 description: "可能Apple最出名的地方就是它的持久化记录信息来构建web服务了。从消费者产品级的MobileMe、Ping到开发者工具级别的Provisioning Portal和iTunes Connect，苹果都在便捷性、鲁棒性、扩展性方面确立了新标准"
