--- a/2013-04-08-bool.md
+++ b/2013-04-08-bool.md
@@ -3,7 +3,7 @@ layout: post
 title: "BOOL / bool / Boolean / NSCFBoolean"
 translator: "Zihan Xu"
 ref: "https://developer.apple.com/library/mac/#documentation/CoreFoundation/Reference/CFBooleanRef/Reference/reference.html"
-framework: Objective-C
+category: Objective-C
 published: true
 description: "再一次，将我们有逻辑的世界编码为冰冷的电脑计算字节码使得我们不得不用这样或那样的方法处理这些问题。同时，通过阅读我们关于Objective-C中布尔值及其同类的讨论，你会发现，真相实在是比小说还离奇。"
 ---
