--- a/2012-10-01-pragma.md
+++ b/2012-10-01-pragma.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: "#pragma"
+author: Mattt Thompson
 translator: "Zihan Xu"
 category: Objective-C
 description: "#pragma声明是彰显Objective-C工艺的标志之一。虽然#pragma最初的目的是为了使得源代码在不同的编译器下兼容的，但精明的Xcode编码器将#pragma使用到了极致。"
