--- a/2013-09-23-ios7.md
+++ b/2013-09-23-ios7.md
@@ -2,7 +2,7 @@
 layout: post
 title: "iOS 7"
 author: Mattt Thompson
-translator: "Zihan Xu"
+translator: Zihan Xu
 category: ""
 description: "随着保密协议的解除，我们终于可以开始聊一聊iOS 7里面精彩的新API了。"
 ---
