--- a/2014-03-17-empathy.md
+++ b/2014-03-17-empathy.md
@@ -4,7 +4,7 @@ title: Empathy
 category: ""
 description: "我们出于本性地想慷慨而有耐心地帮助其他人、解释一些观点。然而在网上，人性似乎没有现实中那么丰满。"
 author: Mattt Thompson
-translator: "Croath Liu"
+translator: Croath Liu
 ---
 
 伟大的软件最初都是为了满足个人需求而被创造的。跟紧一个问题不仅能够让你洞察到解决它的办法，更能给你前进的动力。
