--- a/2012-07-14-nscache.md
+++ b/2012-07-14-nscache.md
@@ -3,7 +3,7 @@ layout: post
 title: NSCache
 category: Foundation
 author: Mattt Thompson
-translator: "Tony Li"
+translator: Tony Li
 ---
 
 可怜的 `NSCache` 一直处于 `NSMutableDictionary` 的阴影之下。就好像没有人知道它提供了垃圾处理的功能，而开发者们却费劲力气地去自己实现它。
