--- a/2013-01-07-nil.md
+++ b/2013-01-07-nil.md
@@ -2,7 +2,7 @@
 layout: post
 title: "nil / Nil / NULL / NSNull"
 author: Mattt Thompson
-translator: "Zihan Xu"
+translator: Zihan Xu
 category: Objective-C
 ---
 
