--- a/2014-03-24-nsurl.md
+++ b/2014-03-24-nsurl.md
@@ -4,7 +4,7 @@ title: "NSURL /<br/>NSURLComponents"
 category: Cocoa
 description: "在所有的一维数据类型中，URI有着至高地位。单独就人类可阅读的字符串这一点来说，它存在并将永远存在于计算机中任何你能够想象到的对位置信息进行编码的数据中。"
 author: Mattt Thompson
-translator: "Croath Liu"
+translator: Croath Liu
 ---
 
 这里有一个直观的描述来解释什么是“一维数据类型”：number或string被格式化为多种多样的值，可以通过数学运算或某种转换方法可以算出它们的值。比如：十六进制的颜色值 <tt style="color: #EE8262;">#EE8262</tt> 的[红绿蓝三原色](http://en.wikipedia.org/wiki/Web_colors)的值通过掩码或移位运算得出；[正则表达式](http://en.wikipedia.org/wiki/Regular_expression)可以通过少量字符中复杂的样本中进行匹配。
