--- a/2012-09-03-nslocale.md
+++ b/2012-09-03-nslocale.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: NSLocale
-category: Foundation
+category: Cocoa
 author: Mattt Thompson
 translator: Henry Lee
 description: "产品的国际化就像牙线：所有人都知道他们应该使用，却可能都不去用。"
