--- a/2013-05-13-nscoding.md
+++ b/2013-05-13-nscoding.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: NSCoding / NSKeyedArchiver
-category: Foundation
+category: Cocoa
 description: "在构建应用程序时，一个重要的架构决策问题是在每次启动之间如何持久化数据。问题是如何精准的重现最后一次关闭应用前的状态；如何描述对象图以使下次完美地重新构建。"
 author: Mattt Thompson
 translator: Yu Jin
