Changing description to excerpt

--- a/2012-08-27-cfbag.md
+++ b/2012-08-27-cfbag.md
@@ -2,7 +2,7 @@
 layout: post
 title: CFBag
 category: Cocoa
-description: 在计算机科学领域集合数据类型的殿堂中，bag没有数组、集合、联合数组、树、图、优先队列那么占有一席之地。其实bag本身就很晦涩，你可能从没听过这东西。
+excerpt: 在计算机科学领域集合数据类型的殿堂中，bag没有数组、集合、联合数组、树、图、优先队列那么占有一席之地。其实bag本身就很晦涩，你可能从没听过这东西。
 author: Mattt Thompson
 translator: Croath Liu
 
