--- a/2013-04-08-bool.md
+++ b/2013-04-08-bool.md
@@ -4,7 +4,7 @@ title: "BOOL / bool / Boolean / NSCFBoolean"
 author: Mattt Thompson
 translator: Zihan Xu
 category: Objective-C
-description: "再一次，将我们有逻辑的世界编码为冰冷的电脑计算字节码使得我们不得不用这样或那样的方法处理这些问题。同时，通过阅读我们关于Objective-C中布尔值及其同类的讨论，你会发现，真相实在是比小说还离奇。"
+excerpt: "再一次，将我们有逻辑的世界编码为冰冷的电脑计算字节码使得我们不得不用这样或那样的方法处理这些问题。同时，通过阅读我们关于Objective-C中布尔值及其同类的讨论，你会发现，真相实在是比小说还离奇。"
 ---
 
 我们之前讨论过[不存在在编程过程中的哲学和技术问题](http://nshipster.com/nil/)。这一周，我们的注意力转到另一个基本的问题：
