--- a/2013-09-23-ios7.md
+++ b/2013-09-23-ios7.md
@@ -4,7 +4,7 @@ title: "iOS 7"
 author: Mattt Thompson
 translator: Zihan Xu
 category: ""
-description: "随着保密协议的解除，我们终于可以开始聊一聊iOS 7里面精彩的新API了。"
+excerpt: "随着保密协议的解除，我们终于可以开始聊一聊iOS 7里面精彩的新API了。"
 ---
 
 随着保密协议的解除，我们终于可以开始聊一聊iOS 7里面精彩的新的API了。新的操作系统增加了_非常多_的API,根据Apple在WWDC上的统计，有1500之多。（同意，虽然其中很大一部分可能只是将`id` 变成了`instancetype`，但是不管怎么说，这是个大数目）。
