--- a/2014-03-17-empathy.md
+++ b/2014-03-17-empathy.md
@@ -2,7 +2,7 @@
 layout: post
 title: Empathy
 category: ""
-description: "我们出于本性地想慷慨而有耐心地帮助其他人、解释一些观点。然而在网上，人性似乎没有现实中那么丰满。"
+excerpt: "我们出于本性地想慷慨而有耐心地帮助其他人、解释一些观点。然而在网上，人性似乎没有现实中那么丰满。"
 author: Mattt Thompson
 translator: Croath Liu
 ---
