--- a/2013-11-04-xctool.md
+++ b/2013-11-04-xctool.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: xctool
-category: "Open Source"
+category: Open Source
 excerpt: "Control the build system, and you control the destiny of the language, its ecosystem, and community."
 ---
 
