--- a/2013-12-30-new-years-2014.md
+++ b/2013-12-30-new-years-2014.md
@@ -1,8 +1,7 @@
 ---
 layout: post
 title: "Reader Submissions -<br/> New Year's 2014"
-category: "Reader Submissions"
-category: ""
+category: Reader Submissions
 excerpt: "As we prepare to increment our NSDateComponents -year by 1, it's time once again for NSHipster end-of-the-year Reader Submissions!"
 ---
 
