Adding popular tags

--- a/2013-01-07-nil.md
+++ b/2013-01-07-nil.md
@@ -4,6 +4,7 @@ title: "nil / Nil / NULL / NSNull"
 author: Mattt Thompson
 translator: Zihan Xu
 category: Objective-C
+tag: popular
 ---
 
 理解“不存在”的概念不仅仅是一个哲学的问题，也是一个实际的问题。我们是_有形_宇宙的居民，而原因在于逻辑宇宙的存在不确定性。作为一个逻辑系统的物理体现，电脑面临一个棘手的问题，就是如何用_存在_表达_不存在_.
