--- a/2014-03-24-nsurl.md
+++ b/2014-03-24-nsurl.md
@@ -2,6 +2,7 @@
 layout: post
 title: "NSURL /<br/>NSURLComponents"
 category: Cocoa
+tag: popular
 excerpt: "在所有的一维数据类型中，URI有着至高地位。单独就人类可阅读的字符串这一点来说，它存在并将永远存在于计算机中任何你能够想象到的对位置信息进行编码的数据中。"
 author: Mattt Thompson
 translator: Croath Liu
