--- a/2014-06-09-ios8.md
+++ b/2014-06-09-ios8.md
@@ -4,6 +4,7 @@ title: "iOS 8"
 author: Mattt Thompson
 translator: David Liu
 category: ""
+tag: popular
 excerpt: "随便去问任何人，他们都会告诉你WWDC2014是近年来最为激动的回忆。这周，我们将拨开iOS 8的云雾，探讨一些所有人都应该知道新API。"
 ---
 
