Added some cookies

--- a/2013-10-14-nserror.md
+++ b/2013-10-14-nserror.md
@@ -512,3 +512,7 @@ As such, here is an exhaustive, well-formatted table at your disposal:
 Having scrolled down through that huge table, you might be expecting the usual NSHipster philosophical wrap-up. Not this week. Do you have any idea how long it took to compile that table? It's all, like, `NSRepetitiveStrainInjury` up in here.
 
 Such are the error of my ways.
+
+Good news are [@shoumikhin](https://github.com/shoumikhin) managed to compile all these and much more error descriptions into one simple [`NSError` category](https://github.com/shoumikhin/NSXtensions/blob/master/NSErrorX.m).
+
+And now you can get a lot of standard human-readable error descriptions with [`myError.friendlyLocalizedDescription`](https://github.com/shoumikhin/NSXtensions/blob/master/NSErrorX.h#L18).
