Converting NSLocale code examples to Swift

--- a/2012-09-03-nslocale.md
+++ b/2012-09-03-nslocale.md
@@ -91,14 +91,21 @@ So if you were building a component that added quotations around arbitrary text,
 
 Another impressive, albeit mostly-useless method is `-displayNameForKey:value:`, which can return the display name of a locale identifier (`NSLocaleIdentifier`):
 
-~~~{objective-c}
+<!-- ~~~{objective-c}
 NSLocale *frLocale = [[NSLocale alloc] initWithLocaleIdentifier:@"fr_FR"];
 NSLog(@"fr_FR: %@", [frLocale displayNameForKey:NSLocaleIdentifier value:@"fr_FR"]);
 NSLog(@"en_US: %@", [frLocale displayNameForKey:NSLocaleIdentifier value:@"en_US"]);
+~~~ -->
+
+~~~{swift}
+let locale = NSLocale(localeIdentifier: "fr_FR")
+
+let fr_FR = locale.displayNameForKey(NSLocaleIdentifier, value: "fr_FR")
+let en_US = locale.displayNameForKey(NSLocaleIdentifier, value: "en_US")
 ~~~
 
-- fr_FR: français (France)
-- en_US: anglais (États-Unis)
+- `fr_FR`: "français (France)"
+- `en_US`: "anglais (États-Unis)"
 
 You should use this method any time you need to display information about the user's current locale, or any alternative locales available to them, like in this screen from the Settings app:
 
@@ -110,9 +117,30 @@ One final method worth mentioning is `NSLocale +preferredLanguages`, which retur
 
 An app that communicates with a web server can use these values to define the `Accept-Language` HTTP header, such that the server has the option to return localized resources:
 
-~~~{objective-c}
+<!-- ~~~{objective-c}
 NSMutableURLRequest *request = ...;
 [request setValue:[NSString stringWithFormat:@"%@", [[NSLocale preferredLanguages] componentsJoinedByString:@", "]], forHTTPHeaderField:@"Accept-Language"];
+~~~ -->
+
+~~~{swift}
+// Accept-Language HTTP Header; see http://www.w3.org/Protocols/rfc2616/rfc2616-sec14.html#sec14.4
+let acceptLanguage: String = {
+    var components: [String] = []
+    for (index, languageCode) in enumerate(NSLocale.preferredLanguages() as [String]) {
+        let q = 1.0 - (Double(index) * 0.1)
+        components.append("\(languageCode);q=\(q)")
+        if q <= 0.5 {
+            break
+        }
+    }
+
+    return join(",", components)
+}()
+
+let URL = NSURL(string: "http://nshipster.com")
+var mutableRequest = NSMutableURLRequest(URL: URL)
+
+mutableRequest.setValue(acceptLanguage, forHTTPHeaderField: "Accept-Language")
 ~~~
 
 Even if your server doesn't yet localize its resources, putting this in place now will allow you to flip the switch when the time comes, without having to push an update to the client. Neat!
