Converting NSCoding code examples to Swift

--- a/2013-05-13-nscoding.md
+++ b/2013-05-13-nscoding.md
@@ -93,7 +93,7 @@ This article will look at the how's, when's, and why's of `NSKeyedArchiver` and 
 
 For example:
 
-~~~{objective-c}
+<!-- ~~~{objective-c}
 @interface Book : NSObject <NSCoding>
 @property NSString *title;
 @property NSString *author;
@@ -130,6 +130,35 @@ For example:
 }
 
 @end
+~~~ -->
+
+~~~{swift}
+class Book: NSObject, NSCoding {
+    var title: String!
+    var author: String!
+    var pageCount: Int!
+    var categories: [String]!
+    var available: Bool!
+
+    // MARK: NSCoding
+
+    required convenience init(coder decoder: NSCoder) {
+        self.init()
+        self.title = decoder.decodeObjectForKey("title") as String?
+        self.author = decoder.decodeObjectForKey("author") as String?
+        self.pageCount = decoder.decodeIntegerForKey("pageCount")
+        self.categories = decoder.decodeObjectForKey("categories") as [String]!
+        self.available = decoder.decodeBoolForKey("available")
+    }
+
+    func encodeWithCoder(coder: NSCoder) {
+        coder.encodeObject(self.title, forKey: "title")
+        coder.encodeObject(self.author, forKey: "author")
+        coder.encodeInt(Int32(self.pageCount), forKey: "pageCount")
+        coder.encodeObject(self.categories, forKey: "categories")
+        coder.encodeBool(self.available, forKey: "available")
+    }
+}
 ~~~
 
 As you can see, `NSCoding` is mostly boilerplate. Each property is encoded or decoded as an object or type, using the name of the property of as the key each time. (Some developers prefer to define `NSString *` constants for each keypath, but this is usually unnecessary).
@@ -153,14 +182,22 @@ An `NSCoding`-backed table view controller might, for instance, set its collecti
 
 #### Archiving
 
-~~~{objective-c}
+<!-- ~~~{objective-c}
 [NSKeyedArchiver archiveRootObject:books toFile:@"/path/to/archive"];
+~~~ -->
+
+~~~{swift}
+NSKeyedArchiver.archiveRootObject(books, toFile: "/path/to/archive")
 ~~~
 
 #### Unarchiving
 
-~~~{objective-c}
+<!-- ~~~{objective-c}
 [NSKeyedUnarchiver unarchiveObjectWithFile:@"/path/to/archive"];
+~~~ -->
+
+~~~{swift}
+NSKeyedUnarchiver.unarchiveObjectWithFile("/path/to/archive")
 ~~~
 
 ## `NSUserDefaults`
@@ -171,16 +208,27 @@ While it is not advisable to store an entire object graph into `NSUserDefaults`,
 
 #### Archiving
 
-~~~{objective-c}
+<!-- ~~~{objective-c}
 NSData *data = [NSKeyedArchiver archivedDataWithRootObject:books];
 [[NSUserDefaults standardUserDefaults] setObject:data forKey:@"books"];
+~~~ -->
+
+~~~{swift}
+let data = NSKeyedArchiver.archivedDataWithRootObject(books)
+NSUserDefaults.standardUserDefaults().setObject(data, forKey: "books")
 ~~~
 
 #### Unarchiving
 
-~~~{objective-c}
+<!-- ~~~{objective-c}
 NSData *data = [[NSUserDefaults standardUserDefaults] objectForKey:@"books"];
 NSArray *books = [NSKeyedUnarchiver unarchiveObjectWithData:data];
+~~~ -->
+
+~~~{swift}
+if let data = NSUserDefaults.standardUserDefaults().objectForKey("books") as? NSData {
+    let books = NSKeyedUnarchiver.unarchiveObjectWithData(data)
+}
 ~~~
 
 ---
